// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/components/elements/Table render 1`] = `
<React.Fragment>
  <WithStyles(ForwardRef(TableContainer))>
    <WithStyles(ForwardRef(Table))>
      <WithStyles(ForwardRef(TableHead))
        classes={
          Object {
            "root": undefined,
          }
        }
      >
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            align="left"
            className=""
          >
            No
          </WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(TableCell))
            align="left"
            className=""
          >
            Name
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
      </WithStyles(ForwardRef(TableHead))>
      <WithStyles(ForwardRef(TableBody))>
        <React.Fragment>
          <WithStyles(ForwardRef(TableRow))
            classes={
              Object {
                "hover": undefined,
              }
            }
            hover={false}
            tabIndex={-1}
          >
            <WithStyles(ForwardRef(TableCell))
              align="left"
            >
              1
            </WithStyles(ForwardRef(TableCell))>
            <WithStyles(ForwardRef(TableCell))
              align="left"
              className=""
              onClick={[Function]}
            >
              Name
            </WithStyles(ForwardRef(TableCell))>
          </WithStyles(ForwardRef(TableRow))>
        </React.Fragment>
      </WithStyles(ForwardRef(TableBody))>
    </WithStyles(ForwardRef(Table))>
  </WithStyles(ForwardRef(TableContainer))>
</React.Fragment>
`;

exports[`src/components/elements/Table render when loading 1`] = `
<React.Fragment>
  <WithStyles(ForwardRef(TableContainer))>
    <WithStyles(ForwardRef(Table))>
      <WithStyles(ForwardRef(TableHead))
        classes={
          Object {
            "root": undefined,
          }
        }
      >
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            align="left"
            className=""
          >
            No
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
      </WithStyles(ForwardRef(TableHead))>
      <WithStyles(ForwardRef(TableBody))>
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            colSpan={1}
          >
            <Skeleton
              circle={false}
              count={1}
              delay={0}
              duration={1.2}
              height={56}
              width={null}
              wrapper={null}
            />
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            colSpan={1}
          >
            <Skeleton
              circle={false}
              count={1}
              delay={0}
              duration={1.2}
              height={56}
              width={null}
              wrapper={null}
            />
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            colSpan={1}
          >
            <Skeleton
              circle={false}
              count={1}
              delay={0}
              duration={1.2}
              height={56}
              width={null}
              wrapper={null}
            />
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            colSpan={1}
          >
            <Skeleton
              circle={false}
              count={1}
              delay={0}
              duration={1.2}
              height={56}
              width={null}
              wrapper={null}
            />
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            colSpan={1}
          >
            <Skeleton
              circle={false}
              count={1}
              delay={0}
              duration={1.2}
              height={56}
              width={null}
              wrapper={null}
            />
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            colSpan={1}
          >
            <Skeleton
              circle={false}
              count={1}
              delay={0}
              duration={1.2}
              height={56}
              width={null}
              wrapper={null}
            />
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            colSpan={1}
          >
            <Skeleton
              circle={false}
              count={1}
              delay={0}
              duration={1.2}
              height={56}
              width={null}
              wrapper={null}
            />
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            colSpan={1}
          >
            <Skeleton
              circle={false}
              count={1}
              delay={0}
              duration={1.2}
              height={56}
              width={null}
              wrapper={null}
            />
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            colSpan={1}
          >
            <Skeleton
              circle={false}
              count={1}
              delay={0}
              duration={1.2}
              height={56}
              width={null}
              wrapper={null}
            />
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            colSpan={1}
          >
            <Skeleton
              circle={false}
              count={1}
              delay={0}
              duration={1.2}
              height={56}
              width={null}
              wrapper={null}
            />
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            colSpan={1}
          >
            <Skeleton
              circle={false}
              count={1}
              delay={0}
              duration={1.2}
              height={56}
              width={null}
              wrapper={null}
            />
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            colSpan={1}
          >
            <Skeleton
              circle={false}
              count={1}
              delay={0}
              duration={1.2}
              height={56}
              width={null}
              wrapper={null}
            />
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
      </WithStyles(ForwardRef(TableBody))>
    </WithStyles(ForwardRef(Table))>
  </WithStyles(ForwardRef(TableContainer))>
</React.Fragment>
`;

exports[`src/components/elements/Table render with sort 1`] = `
<React.Fragment>
  <WithStyles(ForwardRef(TableContainer))>
    <WithStyles(ForwardRef(Table))>
      <WithStyles(ForwardRef(TableHead))
        classes={
          Object {
            "root": undefined,
          }
        }
      >
        <WithStyles(ForwardRef(TableRow))>
          <WithStyles(ForwardRef(TableCell))
            align="left"
            className=""
          >
            No
          </WithStyles(ForwardRef(TableCell))>
          <WithStyles(ForwardRef(TableCell))
            align="left"
            className=""
          >
            <WithStyles(ForwardRef(TableSortLabel))
              IconComponent={[Function]}
              active={false}
              classes={
                Object {
                  "active": undefined,
                  "root": undefined,
                }
              }
              hideSortIcon={true}
              onClick={[Function]}
            >
              Name
            </WithStyles(ForwardRef(TableSortLabel))>
          </WithStyles(ForwardRef(TableCell))>
        </WithStyles(ForwardRef(TableRow))>
      </WithStyles(ForwardRef(TableHead))>
      <WithStyles(ForwardRef(TableBody))>
        <React.Fragment>
          <WithStyles(ForwardRef(TableRow))
            classes={
              Object {
                "hover": undefined,
              }
            }
            hover={false}
            tabIndex={-1}
          >
            <WithStyles(ForwardRef(TableCell))
              align="left"
            >
              1
            </WithStyles(ForwardRef(TableCell))>
            <WithStyles(ForwardRef(TableCell))
              align="left"
              className=""
              onClick={[Function]}
            >
              Name
            </WithStyles(ForwardRef(TableCell))>
          </WithStyles(ForwardRef(TableRow))>
        </React.Fragment>
      </WithStyles(ForwardRef(TableBody))>
    </WithStyles(ForwardRef(Table))>
  </WithStyles(ForwardRef(TableContainer))>
</React.Fragment>
`;
